--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,7 @@ $light-gray: #f9fbfe;
 $dark-gray: #2f2f3e;
 $orange: #ff9774;
 $red: #ff464b;
+$flat-dark: #2f2f3e;
 
 $dark-blue-gradient: linear-gradient(315deg, #4048ef 0%, #5a7bef 100%);
 $light-blue-gradient: linear-gradient(
